[package]
name = "genpwd"
version = "0.1.1"
authors = ["Olaf Brozio"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = """
This program generates a randomized password from character classes. 
Character classes are [a-z], [A-Z], [0-9] and special sign.
"""
repository = "https://github.com/obr-rs/genpwd"
homepage = "https://github.com/obr-rs/genpwd"
documentation = "https://docs.rs/0.1.0/genpwd"
readme = "README.md"
keywords = ["password", "generator"]
categories = ["command-line-utilities"]

[dependencies]
clap = "2.*"
rand = "0.*"